080524 added background color to body in order to mantain an svh height + added info icon for phases with alpinejs + fixed styling issues like overflowing cards, content width + deleted sample blogs

--- a/src/styles/Global.css
+++ b/src/styles/Global.css
@@ -12,4 +12,5 @@ body{
     align-items:center;
     height:100svh;
     width:100%;  
+    background-color: #F2F3F4;
 }
